--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/Edit.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/Edit.razor
@@ -55,11 +55,11 @@
                     <div class="mb-3">
                         <label class="form-label text-white">Rounds</label>
                         <div class="d-flex align-items-center">
-                            <span class="badge fs-6 me-3" style="background-color: var(--pl-purple)">@_roundCount</span>
-                            <button type="button" class="btn btn-sm dark-pink-button me-2" @onclick="() => ViewRounds(SeasonId)" title="View Rounds">
+                            <span class="badge fs-6 me-3" style="background-color: var(--pl-purple-800)">@_roundCount</span>
+                            <button type="button" class="btn btn-sm dark-red-button me-2" @onclick="() => ViewRounds(SeasonId)" title="View Rounds">
                                 <span class="bi bi-eye-fill"></span>
                             </button>
-                            <button type="button" class="btn btn-sm light-cyan-button" @onclick="() => AddRound(SeasonId)" title="Add Round">
+                            <button type="button" class="btn btn-sm blue-light-button" @onclick="() => AddRound(SeasonId)" title="Add Round">
                                 <span class="bi bi-plus-circle-fill"></span>
                             </button>
                         </div>
