--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/Dashboard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/Dashboard.razor
@@ -32,19 +32,19 @@
                 </div>
 
                 <div class="col-md-4 mb-4">
-                    <div class="dashboard-card">
+                    <div class="card">
                         <h5 class="text-white">Monthly Leaderboard (Coming Soon)</h5>
                     </div>
                 </div>
 
                 <div class="col-md-4 mb-4">
-                    <div class="dashboard-card">
+                    <div class="card">
                         <h5 class="text-white">Correct Scores (Coming Soon)</h5>
                     </div>
                 </div>
 
                 <div class="col-12 mb-4">
-                    <div class="dashboard-card">
+                    <div class="card">
                         <h5 class="text-white">Winnings (Coming Soon)</h5>
                     </div>
                 </div>
