--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/OverallLeaderboardTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/OverallLeaderboardTile.razor
@@ -3,7 +3,7 @@
 @using PredictionLeague.Contracts.Leaderboards
 @using PredictionLeague.Web.Client.Services.Leagues
 
-<div class="dashboard-card">
+<div class="card">
     <h5 class="card-title text-white fw-bold mb-3">Overall Leaderboard</h5>
     <div class="card-body">
         @if (_isLoading)
