--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/RoundResultsTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/RoundResultsTile.razor
@@ -4,7 +4,7 @@
 
 @using PredictionLeague.Web.Client.Services.Leagues
 
-<div class="dashboard-card">
+<div class="card">
     <div class="d-flex flex-column flex-md-row justify-content-md-between align-items-center mb-3 text-center text-md-start">
         <h5 class="text-white fw-bold mb-3 mb-md-0">Round Results</h5>
 
