--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Shared/BackAndSaveButtons.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Shared/BackAndSaveButtons.razor
@@ -1,7 +1,7 @@
 ﻿<div class="d-flex justify-content-between mt-4">
     @if (BackVisible)
     {
-        <button type="button" class="btn pink-button d-flex align-items-center" @onclick="OnBackClick">
+        <button type="button" class="btn red-button d-flex align-items-center" @onclick="OnBackClick">
             <span class="bi bi-arrow-left-circle-fill me-2"></span>@BackText
         </button>
     }
@@ -9,7 +9,7 @@
     @if (SaveVisible)
     {
         var isDisabled = IsBusy || IsSaveDisabled;
-        var buttonClass = $"btn green-button d-flex align-items-center {(isDisabled ? "disabled-button" : "")}";
+        var buttonClass = $"btn green-button d-flex align-items-center {(isDisabled ? "grey-button" : "")}";
 
         <button type="submit" class="@buttonClass" disabled="@isDisabled">
             @if (IsBusy)
