--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Team/List.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Team/List.razor
@@ -14,7 +14,8 @@
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h3 class="fw-bold text-white mb-0">Manage Teams</h3>
             <button class="btn d-flex align-items-center green-button" @onclick='() => NavigationManager.NavigateTo("/admin/teams/create")'>
-                <span class="bi bi-plus-circle-fill me-2"></span>Create Team
+                <span class="bi bi-plus-circle-fill"></span>
+                <span class="d-none d-md-inline ms-2">Create Team</span>
             </button>
         </div>
 
