--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/JoinPrivateLeagueModal.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/JoinPrivateLeagueModal.razor
@@ -7,8 +7,8 @@
 
 <div class="modal fade" id="joinPrivateLeagueModal" tabindex="-1" aria-labelledby="joinPrivateLeagueModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content" style="background-color: var(--pl-purple-light); color: white;">
-            <div class="modal-header" style="border-bottom-color: var(--pl-purple-dark);">
+        <div class="modal-content" style="background-color: var(--pl-purple-600); color: white;">
+            <div class="modal-header" style="border-bottom-color: var(--pl-purple-900);">
                 <h5 class="modal-title fw-bold text-white" id="joinPrivateLeagueModalLabel">Join Private League</h5>
                 <button type="button" class="btn-close btn-close-white" @onclick="Close" aria-label="Close"></button>
             </div>
@@ -23,7 +23,7 @@
                     </div>
 
                     <div class="d-flex justify-content-end align-items-center mt-4">
-                        <button type="button" class="btn pink-button me-2" @onclick="Close">
+                        <button type="button" class="btn red-button me-2" @onclick="Close">
                             <span class="bi bi-x-circle me-2"></span>Cancel
                         </button>
                         <button type="submit" class="btn green-button" disabled="@_isBusy">
