--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Home.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Home.razor
@@ -30,7 +30,7 @@
     }
 
     .testimonial-card {
-        background-color: var(--pl-purple-light);
+        background-color: var(--pl-purple-600);
         border: none;
     }
 
@@ -50,7 +50,7 @@
                     <h1 class="display-4 fw-bold text-white">The Ultimate Premier League Prediction Game</h1>
                     <p class="fs-4 col-md-8 mx-auto">Challenge your friends, prove your football knowledge, and top the leaderboard. Your journey to prediction glory starts here.</p>
                     <div class="d-flex justify-content-center align-items-center mt-4 gap-3">
-                        <NavLink class="btn btn-lg light-cyan-button px-4" href="authentication/login">Login</NavLink>
+                        <NavLink class="btn btn-lg blue-light-button px-4" href="authentication/login">Login</NavLink>
                         <NavLink class="btn btn-lg green-button px-4" href="authentication/register">Register</NavLink>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                 </div>
             </div>
 
-            <div class="py-5" style="background-color: var(--pl-purple-light);">
+            <div class="py-5" style="background-color: var(--pl-purple-600);">
                 <div class="container px-4">
                     <h2 class="text-center text-white fw-bold mb-5">Why Join Prediction League?</h2>
                     <div class="row align-items-center g-5">
@@ -130,7 +130,7 @@
                 </div>
             </div>
 
-            <div class="py-5" style="background-color: var(--pl-purple);">
+            <div class="py-5" style="background-color: var(--pl-purple-800);">
                 <div class="container text-center text-white">
                     <h2 class="fw-bold">Ready to Prove Your Punditry?</h2>
                     <p class="fs-5 my-4 col-md-8 mx-auto">The new season is just around the corner. Create your account, join a league, and start making your predictions today!</p>
