--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Edit.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Edit.razor
@@ -28,7 +28,7 @@
                 <ChildContent>
                     <div class="mb-3">
                         <label class="form-label text-white">Season</label>
-                        <div class="form-control-plaintext" style="background-color: var(--pl-purple-light); color: white; font-weight: bold;">
+                        <div class="form-control-plaintext" style="background-color: var(--pl-purple-600); color: white; font-weight: bold;">
                             @_seasonName
                         </div>
                     </div>
