--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/colours.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/colours.css
@@ -1,23 +1,37 @@
 ﻿:root {
+    /* Base Colors */
+    --pl-white: #FFFFFF;
+    --pl-black: #1f1f1f;
+
     /* Purples */
-    --pl-purple: #3D195B;
-    --pl-purple-dark: #31144a;
-    --pl-purple-light: #4A2E6C;
-    --pl-purple-bright: #963cff;
+    --pl-purple-900: #31144A;
+    --pl-purple-800: #3D195B;
+    --pl-purple-700: #432468;
+    --pl-purple-600: #4A2E6C;
+    --pl-purple-accent: #963cff;
+
     /* Reds */
     --pl-red: #E90052;
+
     /* Blues */
     --pl-blue: #04F5FF;
-    --pl-light-cyan: #03c2b4;
+    --pl-blue-light: #03c2b4;
+
     /* Greens */
     --pl-green: #00FF85;
     --pl-green-light: #84fab0;
+
+    /* Yellows */
+    --pl-yellow: #EBFF01;
+
     /* Greys */
-    --pl-grey-light: #EAEAEA;
-    /* Gold */
+    --pl-grey-100: #EAEAEA;
+    --pl-grey-200: #DADCE0;
+    --pl-grey-300: #CECECE;
+    --pl-grey-500: #6C757D;
+
+    /* Medals */
     --pl-gold: #C9B037;
-    /* Silver */
     --pl-silver: #B4B4B4;
-    /* Bronze */
     --pl-bronze: #6A3805;
 }
