--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/components/badges.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/components/badges.css
@@ -7,12 +7,20 @@
 }
 
 
+.bg-pl-red {
+    background-color: var(--pl-red);
+}
+
+.bg-pl-blue-light {
+    background-color: var(--pl-blue-light);
+}
+
 .badge-group {
     display: inline-flex;
     align-items: center;
-    gap: 0.5rem; /* Space between icon and text */
-    border-radius: 50rem; /* Fully rounded corners */
-    padding: 4px 12px 4px 4px; /* Padding: top/bottom, right, left */
+    gap: 0.5rem; 
+    border-radius: 50rem;
+    padding: 4px 12px 4px 4px;
     font-size: 0.8em;
     font-weight: bold;
     color: white;
@@ -20,37 +28,30 @@
 
 .badge-group--green {
     background-color: var(--pl-green);
-    color: white;
 }
 
 .badge-group--purple {
-    background-color: var(--pl-purple-bright);
-    color: white;
+    background-color: var(--pl-purple-accent);
 }
 
 .badge-group--red {
     background-color: var(--pl-red);
-    color: white;
 }
 
 .badge-group--blue {
-    background-color: var(--pl-light-cyan);
-    color: white;
+    background-color: var(--pl-blue-light);
 }
 
 .badge-group--gold {
     background-color: var(--pl-gold);
-    color: white;
 }
 
 .badge-group--silver {
     background-color: var(--pl-silver);
-    color: white;
 }
 
 .badge-group--bronze {
     background-color: var(--pl-bronze);
-    color: white;
 }
 
 .badge-icon {
@@ -60,16 +61,20 @@
     width: 24px;
     height: 24px;
     border-radius: 50%;
-    font-size: 14px;
+    font-size: 12px;
     background-color: white;
 }
+    .badge-icon .bi {
+        position: relative;
+        top: 1px;
+    }
 
 .badge-group--green .badge-icon {
     color: var(--pl-green);
 }
 
 .badge-group--purple .badge-icon {
-    color: var(--pl-purple-bright);
+    color: var(--pl-purple-accent);
 }
 
 .badge-group--red .badge-icon {
@@ -77,7 +82,7 @@
 }
 
 .badge-group--blue .badge-icon {
-    color: var(--pl-light-cyan);
+    color: var(--pl-blue-light);
 }
 
 .badge-group--gold .badge-icon {
@@ -100,4 +105,16 @@
         background-color: transparent;
         color: white;
     }
+
+@media (max-width: 400px) {
+    .badge-group {
+        font-size: 0.65em;
+        padding: 2px 10px 2px 2px;
+    }
+
+    .badge-icon {
+        font-size: 1.1em;
+    }
+}
+
 
