--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/layout/loading.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/layout/loading.css
@@ -8,7 +8,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: var(--pl-purple);
+    background-color: var(--pl-purple-800);
     color: white;
     z-index: 9999;
 }
