--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/pages/predictions.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/pages/predictions.css
@@ -7,22 +7,21 @@
     grid-template-columns: 1fr;
 }
 
-/* On medium screens (md) and up, switch to a two-column layout */
-@media (min-width: 768px) {
+@media (min-width: 992px) {
     .prediction-grid {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
 .prediction-card {
-    background-color: var(--pl-purple-light);
+    background-color: var(--pl-purple-600);
     border-radius: var(--bs-border-radius);
     overflow: hidden;
     color: white;
 }
 
 .prediction-card-header {
-    background-color: var(--pl-purple-dark);
+    background-color: var(--pl-purple-900);
     padding: 0.75rem 1.5rem;
     text-align: center;
     font-weight: bold;
@@ -32,7 +31,7 @@
 }
 
 .prediction-card-body {
-    background-color: var(--pl-purple);
+    background-color: var(--pl-purple-800);
     padding: 1.0rem;
     display: flex;
     align-items: center;
@@ -60,8 +59,8 @@
     }
 
     .status-select-pill.in-progress {
-        background-color: #EBFF01;
-        color: var(--pl-purple-dark);
+        background-color: var(--pl-yellow);
+        color: var(--pl-purple-900);
         background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%2331144a' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
     }
 
@@ -109,9 +108,9 @@
     text-align: center;
     font-weight: bold;
     font-size: 2rem;
-    border: 2px solid var(--pl-purple-dark);
+    border: 2px solid var(--pl-purple-900);
     background-color: white;
-    color: var(--pl-purple);
+    color: var(--pl-purple-800);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -133,7 +132,7 @@
     }
 
     .stepper-btn:disabled {
-        color: #6c757d;
+        color: var(--pl-grey-500);
         cursor: not-allowed;
     }
 
